feat(admin,ui): Dashboard prompt + Gemini model; knowledge UI enhancements; S3 config
admin:
- add DashboardPromptBuilder and DashboardPromptTemplate for dashboard generator prompts
- introduce GeminiModelBuildHandler; update provider/factory wiring
- refine EmbeddingServiceImpl and LangEmbeddingServiceImpl; update endpoints/controllers
- add AwsS3Config and integrate S3 in AigcOssServiceImpl

ui:
- enhance knowledge docs list/slice and import flows
- add AppEditModal for app management
- update dashboard-generator previews and steps
- remove unused embed-store/columns.ts

chore:
- update application.yml and pom.xml